# braintrust-simpleqa

./: README.md  analyze_results.ipynb  evaluate.py  generate_qa_dataset.py  pyproject.toml
prompts/: grader_prompt.txt
