[project]
name = "braintrust-simpleqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "braintrust>=0.0.167",
    "instructor>=1.6.3",
    "ipykernel>=6.29.5",
    "ipython>=8.29.0",
    "matplotlib>=3.9.2",
    "openai>=1.53.0",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]
